tests/scripts/errors/lex/unterminated_sq_string.cdo
VAR s = 'open quote never closes
print(s);
